# Crossplatform-Chess-Server

./: .gitignore  CMakeLists.txt  PlayerInterface.cpp  PlayerInterface.hpp  README.md  abc.txt  build.sh  main.cpp  networkinterface.cpp  networkinterface.h  protoc.sh  scratch.cpp
Qt-Chess/: Makefile  Qt-Chess.pro  boardspot.cpp  boardspot.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkinterface.cpp  networkinterface.h  protoc.sh
Qt-Chess/game/: Makefile  bit_masks.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  game.cpp  game.hpp  piece.cpp  piece.hpp  player.hpp  spots_enum.hpp
Qt-Chess/game/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
Qt-Chess/game_engine/: Makefile  game.cpp  player.hpp  spots_enum.hpp
Qt-Chess/game_engine/pieces/: bishop.cpp  king.hpp  knight.cpp
Qt-Chess/proto_build/: schema.pb.cc
Qt-Chess/protobuf/: protoc.sh  schema.pb.cc  schema.pb.h  schema.proto
game/: Makefile  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  game.cpp  piece.cpp  piece.hpp  player.hpp  spots_enum.h  spots_enum.hpp
game/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
game_engine/: bitboard.cpp  board.cpp  board.hpp  game.cpp  game.hpp  piece.hpp  player.hpp
game_engine/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  pawn.hpp  queen.cpp  rook.cpp  rook.hpp
protobuf/: CMakeLists.txt  protobuf_asio_interface.cpp  protobuf_asio_interface.hpp  schema.pb.cc  schema.pb.h  schema.proto
